Add missing initialization of txy_fixed_valid field. Since the fixed coordinates are valid, the patch eliminates possible re-calculation of the fixed coordinates but doesn't affect the end result. Bug 688914.

DIFFERENCES:
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8193 a1074d23-0009-0410-80fe-cf8c14f379e6